fix: Fixed broken UI font-size

--- a/css/general.css
+++ b/css/general.css
@@ -1,15 +1,3 @@
-/* General */
-
-.auto-flow {
-  overflow-y: auto !important;
-}
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-  margin: 0px;
-  padding: 0px;
-}
 .white-heading {
   color: #fff;
   font-size: 2rem;
@@ -29,19 +17,6 @@
   display: flex;
   justify-content: center;
   align-content: center;
-}
-html {
-  font-size: 15px;
-  scroll-behavior: smooth;
-}
-body {
-  width: 100vw;
-  min-height: 100vh;
-  background-color: #24292e;
-  color: #000126;
-  font-family: 'Ubuntu', sans-serif;
-  perspective: 600px;
-  overflow-x: hidden;
 }
 
 .mt-24 {
