--- a/css/squareboat.css
+++ b/css/squareboat.css
@@ -63,14 +63,11 @@
   }
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 600px) {
   .squareboat-icon {
     transform: scale(1) rotate(-20deg);
   }
-}
-
-@media only screen and (max-width: 400px) {
-}
-
-@media only screen and (max-width: 320px) {
+  .sb-details {
+    font-size: 1.2rem;
+  }
 }
